CHANGE: remove contact form, fix social links

--- a/index.html
+++ b/index.html
@@ -56,21 +56,19 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <h2>CALL 9911669435</h2>
-			<h2>COMPANY REGESTRATION, COMPLIANCES, GST </h2>
+		                <h2>COMPANY REGESTRATION, COMPLIANCES, GST </h2>
                     </div>
                 </div>
 
                 <div class="row">
                     <div class="col-md-12"> 
-                        <p>Company Regestration @6999 No Hiddend Cost
-Gst Regestration @599 No Hiddend Charges</p>
+                        <p>Company Regestration @6999 & Gst Regestration @599 (No Hiddend Charges)</p>
                     </div>
                 </div>
 
                 <div class="row">
                     <div class="col-md-12">
-                        <a href="#" class="btn btn-banner">CALL 9911669435</a>
+                        <a href="tel:+919911669435" class="btn btn-banner">CALL 9911669435</a>
                     </div>
                 </div>
             </div>
@@ -93,7 +91,7 @@ Liabilities
 Business is the game of challenges where are only two stages profit & loss. The liability of members is limited in a Limited company, that mean which money and assets you have in the name of your company only that thinks are liable for any kind of liabilities in company for and the personal assets of promoter's person bank account are not liable.
 
                                 </p>
-                                <a href="#" class="btn btn-learn-more">LEARN MORE <i class="ion-ios-arrow-right"></i></a>
+                                <!-- <a href="#" class="btn btn-learn-more">LEARN MORE <i class="ion-ios-arrow-right"></i></a> -->
                             </div>
                         </div>
                         <div class="col-md-4">
@@ -119,7 +117,7 @@ Business is the game of challenges where are only two stages profit & loss. The 
                                 <p>
                                     We are a team of CA, CS, CMA and Lawyers who is using technology at it best to provide services to cater to the need of todays businesses in the fast moving and cost effective world..
                                 </p>
-                                <a href="#" class="btn btn-learn-more">LEARN MORE <i class="ion-ios-arrow-right"></i></a>
+                                <!-- <a href="#" class="btn btn-learn-more">LEARN MORE <i class="ion-ios-arrow-right"></i></a> -->
                             </div>
                         </div>
                     </div>
@@ -139,7 +137,7 @@ Business is the game of challenges where are only two stages profit & loss. The 
                                 <p>
                                     A Digital Signature Certificate (DSC) is a secure digital key that certifies the identity of the holder, issued by a Certifying Authority (CA). It typically contains your identity (name, email, country, APNIC account name and your public key). Digital Certificates use Public Key Infrastructure meaning data that has been digitally signed or encrypted by a private key can only be decrypted by its corresponding public key. A digital certificate is an electronic "credit card" that establishes your credentials when doing business or other transactions on the Web.
                                 </p>
-                                <a href="#" class="btn btn-learn-more">LEARN MORE <i class="ion-ios-arrow-right"></i></a>
+                                <!-- <a href="#" class="btn btn-learn-more">LEARN MORE <i class="ion-ios-arrow-right"></i></a> -->
                             </div>
                         </div>
                         <div class="col-md-4">
@@ -280,8 +278,7 @@ Business is the game of challenges where are only two stages profit & loss. The 
 
 
                                     </p>
-                                    <a href="#" class="btn btn-learn-more">
-                                    LEARN MORE <i class="ion-ios-arrow-right"></i>
+                                    <!-- <a href="#" class="btn btn-learn-more">LEARN MORE <i class="ion-ios-arrow-right"></i> -->
                                     </a>
                                 </div>
                             </div>
@@ -302,8 +299,7 @@ Business is the game of challenges where are only two stages profit & loss. The 
                                             <li>State shops and establishment Act Labor and Employment Act Any other applicable law</li>
                                         </ul>
                                     </p>
-                                    <a href="#" class="btn btn-learn-more">
-                                    LEARN MORE <i class="ion-ios-arrow-right"></i>
+                                    <!-- <a href="#" class="btn btn-learn-more">LEARN MORE <i class="ion-ios-arrow-right"></i> -->
                                     </a>
                                 </div>
                             </div>
@@ -311,7 +307,7 @@ Business is the game of challenges where are only two stages profit & loss. The 
                     </div>
                     <div class="row">
                         <div class="col-md-12">
-                            <a href="#" class="btn btn-expand-all">EXPAND ALL</a>
+                            <!-- <a href="#" class="btn btn-expand-all">EXPAND ALL</a> -->
                         </div>
                     </div>
                 </div>
@@ -341,7 +337,7 @@ Business is the game of challenges where are only two stages profit & loss. The 
                 </div>
                 <div class="footer-features">
                     <div class="row">
-                        <div class="col-md-6">
+                        <!-- <div class="col-md-6">
                             <form>
                                 <div class="form-group">
                                     <input type="text" name="name name" class="form-control form-footer" placeholder="Name" required="">
@@ -354,7 +350,8 @@ Business is the game of challenges where are only two stages profit & loss. The 
                                 </div>
                                 <button type="submit" class="btn btn-ss">Send Message</button>
                             </form>
-                        </div>
+                        </div> -->
+                        <div class="col-md-3"></div>
                         <div class="col-md-6">
                             <div class="footer-list">
                                 <ul class="list-unstyled">
@@ -371,12 +368,12 @@ Business is the game of challenges where are only two stages profit & loss. The 
                                 <div class="list-ss">
                                     <ul class="list-inline">
                                         <li>
-                                            <a href="#"><i class="ion-social-facebook icon-facebook"></i></a>
+                                            <a href="https://www.facebook.com/usvassociate" target="_blank"><i class="ion-social-facebook icon-facebook"></i></a>
                                         </li>
                                         <li>
-                                            <a href="#"><i class="ion-social-twitter icon-twitter"></i></a>
+                                            <a href="https://twitter.com/usvassociate" target="_blank"><i class="ion-social-twitter icon-twitter"></i></a>
                                         </li>
-                                        <li>
+                                        <!-- <li>
                                             <a href="#"><i class="ion-social-linkedin icon-linkedin"></i></a>
                                         </li>
                                         <li>
@@ -384,11 +381,12 @@ Business is the game of challenges where are only two stages profit & loss. The 
                                         </li>
                                         <li>
                                             <i class="ion-social-rss icon-rss"></i>
-                                        </li>
+                                        </li> -->
                                     </ul>
                                 </div>
                             </div>
                         </div>
+                        <div class="col-md-3"></div>
                     </div>
                 </div>
                 <div class="footer-bottom">
