--- a/beta/index.html
+++ b/beta/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="utf-8">
@@ -48,16 +48,16 @@
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Practice Area <b class="caret"></b></a>
 						<ul class="dropdown-menu">
-							<li><a href="#">Corporate & Commercial</a></li>
-							<li><a href="#">Intellectual Property</a></li>
-							<li><a href="#">Infrastructure & Transportation</a></li>
-							<li><a href="#">Artificial Intelligence</a></li>
-							<li><a href="#">NCLT & NCLATs</a></li>
-							<li><a href="#">Litigation</a></li>
-							<li><a href="#">Private Equity</a></li>
-							<li><a href="#">Licenses</a></li>
-							<li><a href="#">Banking & Finance</a></li>
-							<li><a href="#">Foriegn Investment</a></li>
+							<li><a href="CORPORATE & COMMERCIAL.html">Corporate & Commercial</a></li>
+							<li><a href="INTELLECTUAL PROPERTY.html">Intellectual Property</a></li>
+							<li><a href="INFRASTRUCTURE & TRANSPORTATION.html">Infrastructure & Transportation</a></li>
+							<li><a href="ARTIFICIAL INTELLIGENCE.html">Artificial Intelligence</a></li>
+							<li><a href="NCLT & NCLATS.html">NCLT & NCLATs</a></li>
+							<li><a href="LITIGATION.html">Litigation</a></li>
+							<li><a href="PRIVATE EQUITY.html">Private Equity</a></li>
+							<li><a href="ENERGY AND RENEWABLE.html">ENERGY AND RENEWABLE</a></li>
+							<li><a href="BANKING & FINANCE.html">Banking & Finance</a></li>
+							<li><a href="FORIEGN INVESTMENT.html">Foriegn Investment</a></li>
 						</ul>
 					</li>
 					<li><a href="https://easylauncher.net/blog" target="new">Blog</a></li>
@@ -93,22 +93,22 @@
 				<div class="col-sm-6 col-md-3">
 					<h3 class="text-center">Corporate & Commercial</h3>
 					<!-- <p>Firm has robust practice in M&A , Private Equity and Joint Venture.</p> -->
-					<p class="text-center"><a href="" class="btn btn-action">Read more</a></p>
+					<p class="text-center"><a href="CORPORATE & COMMERCIAL.html" class="btn btn-action">Read more</a></p>
 				</div>
 				<div class="col-sm-6 col-md-3">
 					<h3 class="text-center">Intellectual Property</h3>
 					<!-- <p>Firm has deep knowledge and practice in Patent, Copyright, Trade Mark etc.</p> -->
-					<p class="text-center"><a href="" class="btn btn-action">Read more</a></p>
+					<p class="text-center"><a href="INTELLECTUAL PROPERTY.html" class="btn btn-action">Read more</a></p>
 				</div>
 				<div class="col-sm-6 col-md-3">
 					<h3 class="text-center">Infrastructure & Transportation</h3>
 					<!-- <p>Firm has deep understanding of laws governing the sector.</p> -->
-					<p class="text-center"><a href="" class="btn btn-action">Read more</a></p>
+					<p class="text-center"><a href="INFRASTRUCTURE & TRANSPORTATION.html" class="btn btn-action">Read more</a></p>
 				</div>
 				<div class="col-sm-6 col-md-3">
 					<h3 class="text-center">Artificial Intelligence</h3>
 					<!-- <p>Firm has upto date knowledge of global AI Sector and solution for all problems in this sector.</p> -->
-					<p class="text-center"><a href="" class="btn btn-action">Read more</a></p>
+					<p class="text-center"><a href="ARTIFICIAL INTELLIGENCE.html" class="btn btn-action">Read more</a></p>
 				</div>
 			</div>
 
@@ -116,40 +116,40 @@
 				<div class="col-sm-6 col-md-3">
 					<h3 class="text-center">NCLT & NCLATs</h3>
 					<!-- <p>The National Company Law Tribunal (NCLT) governs company law matters in India. We provide legal services for all NCLT matters.</p> -->
-					<p class="text-center"><a href="" class="btn btn-action">Read more</a></p>
+					<p class="text-center"><a href="NCLT & NCLATS.html" class="btn btn-action">Read more</a></p>
 				</div>
 				<div class="col-sm-6 col-md-3">
 					<h3 class="text-center">Litigation</h3>
 					<!-- <p>Firm has expertise in all kind of Litigation and Dispute Resolution and provides quick solutions.</p> -->
-					<p class="text-center"><a href="" class="btn btn-action">Read more</a></p>
+					<p class="text-center"><a href="LITIGATION.html" class="btn btn-action">Read more</a></p>
 				</div>
 				<div class="col-sm-6 col-md-3">
 					<h3 class="text-center">Private Equity</h3>
 					<!-- <p>Firm has deep knowledge of laws governing this sector and provide best solutions  to our client.</p> -->
-					<p class="text-center"><a href="" class="btn btn-action">Read more</a></p>
+					<p class="text-center"><a href="PRIVATE EQUITY.html" class="btn btn-action">Read more</a></p>
 				</div>
 				<div class="col-sm-6 col-md-3">
-					<h3 class="text-center">Licenses</h3>
-					<!-- <p>We help our clients with all the problems related to different licenses.</p> -->
-					<p class="text-center"><a href="" class="btn btn-action">Read more</a></p>
+					<h3 class="text-center">ENERGY AND RENEWABLE</h3>
+					<!-- <p>We help our clients with all the problems related to energy and renewable.</p> -->
+					<p class="text-center"><a href="ENERGY AND RENEWABLE.html" class="btn btn-action">Read more</a></p>
 				</div>
 			</div>
 
 			<div class="row">
 				<div class="col-sm-6 col-md-3">
-					<!-- <h3 class="text-center">NCLT & NCLATs</h3>
-					<p>I don't think they tried to market it to the billionaire, spelunking, base-jumping crowd. i did the same thing to gandhi, he didn't eat for three weeks. i once heard a wise man say there are no perfect men.</p>
-					<p class="text-center"><a href="" class="btn btn-action">Read more</a></p> -->
+					<!-- <h3 class="text-center">NCLT & NCLATs</h3> -->
+					<!-- <p>I don't think they tried to market it to the billionaire, spelunking, base-jumping crowd. i did the same thing to gandhi, he didn't eat for three weeks. i once heard a wise man say there are no perfect men.</p> -->
+					<!-- <p class="text-center"><a href="" class="btn btn-action">Read more</a></p> -->
 				</div>
 				<div class="col-sm-6 col-md-3">
 					<h3 class="text-center">Banking & Finance</h3>
 					<!-- <p>Firm advises the clients on all the matter related to this sector.	</p> -->
-					<p class="text-center"><a href="" class="btn btn-action">Read more</a></p>
+					<p class="text-center"><a href="BANKING & FINANCE.html" class="btn btn-action">Read more</a></p>
 				</div>
 				<div class="col-sm-6 col-md-3">
 					<h3 class="text-center">Foriegn Investment</h3>
 					<!-- <p>Firm deals with all the matters related to foreign investment.</p> -->
-					<p class="text-center"><a href="" class="btn btn-action">Read more</a></p>
+					<p class="text-center"><a href="FORIEGN INVESTMENT.html" class="btn btn-action">Read more</a></p>
 				</div>
 				<!-- <div class="col-sm-6 col-md-3">
 					<h3 class="text-center">Licenses</h3>
@@ -173,7 +173,7 @@
 							<img src="assets/images/pp-shiv.jpg" alt="">
 							<span class="cover"><span class="more">See details &rarr;</span></span>
 						</span>
-						<span class="title">Shiv Shankar Harami</span>
+						<span class="title">Shiv Shankar Kumar</span>
 					</a>
 					<span class="details"><a href="">Parabhu</a> | <a href="">Pathh Pradarshak</a> | <a href="">Partner</a></span>
 					<h4></h4>
@@ -298,7 +298,7 @@
 						<a href=""><i class="fa fa-twitter fa-2"></i></a>
 						<a href=""><i class="fa fa-dribbble fa-2"></i></a>
 						<a href=""><i class="fa fa-github fa-2"></i></a>
-						<a href=""><i class="fa fa-facebook fa-2"></i></a>
+						<a href="https://www.facebook.com/usvassociate/"target="_blank"><i class="fa fa-facebook fa-2"></i></a>
 					</p>
 				</div>
 			</div>
