--- a/beta/about.html
+++ b/beta/about.html
@@ -26,9 +26,9 @@
 <header id="header">
 	<div id="head" class="parallax" parallax-speed="1">
 		<h1 id="logo" class="text-center">
-			<span class="title">Anthony Russel</span>
-			<span class="tagline">A mystery person<br>
-				<a href="">contact@example.com</a></span>
+			<span class="title">USV & ASSOCIATES</span>
+			<span class="We Deliver"><br>
+				<a href=""></a></span>
 		</h1>
 	</div>
 
@@ -88,12 +88,12 @@
 
 			<!-- Article main content -->
 			<article class="col-sm-8 maincontent">
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, consequuntur eius repellendus eos aliquid molestiae ea laborum ex quibusdam laudantium voluptates placeat consectetur quam aliquam beatae soluta accusantium iusto nihil nesciunt unde veniam magnam repudiandae sapiente.</p>
+				<p>USV and Associates is a leading group of Chartered Accountants, Company Secretaries and Lawyers with a comprehensive practice portfolio who are committed to help startups and business owners in order to start, grow and sustain their businesses and solving legal compliances and technical hurdles related to their businesses. We are an online/offline platform for business compliances ranging from Company Registration, Tax Consultancy, Trademark Registration, Annual Filings, Accounting, Business Compliances and all legal matters related to business and individuals in India.</p>
 				<p><img src="assets/images/mac.jpg" alt="" class="" width="100%" ></p>
-				<h3>Necessitatibus</h3>
-				<p>Velit, odit, eius, libero unde impedit quaerat dolorem assumenda alias consequuntur optio quae maiores ratione tempore sit aliquid architecto eligendi pariatur ab soluta doloremque dicta aspernatur labore quibusdam dolore corrupti quod inventore. Maiores, repellat, consequuntur eius repellendus eos aliquid molestiae ea laborum ex quibusdam laudantium voluptates placeat consectetur quam aliquam!</p>
-				<h3>Fugit, laboriosam</h3>
-				<p>Eum, quasi, est, vitae, ipsam nobis consectetur ea aspernatur ad eos voluptatibus fugiat nisi perferendis impedit. Quam, nulla, excepturi, voluptate minus illo tenetur sint ab in culpa cumque impedit quibusdam. Saepe, molestias quia voluptatem natus velit fugiat omnis rem eos sapiente quasi quaerat aspernatur quisquam deleniti accusantium laboriosam odio id?</p>
+				<h3></h3>
+				<p>We are committed to help startups and business owners in order to start, grow and sustain their businesses. We solve legal compliances and technical hurdles related to the businesses.We believe that our interest is aligned with the interest of the clients and this insight enable us to provide highest standard of work to our clients. We deal on the matters across the spectrum of corporate & commercial, contractual and employment law. We believe that the success of an organization is reflected by the caliber of it's workforce. Each and every one of our associates is a leader.</p>
+				<h3></h3>
+				<p>People are our assets and they are only who maintain the name of the firm. We believe in conducting regular training for our team in order to keep them up to date with the changes in procedural and substantive laws. At USV & Associates, we believe in establishing strong and enduring relationships with our clients by ensuring that we are always available to attend to our client’s needs and to understand our client’s goals.?</p>
 			</article>
 			<!-- /Article -->
 			
